--- a/TestBasePO/ExpenseFunctionalTests.csproj
+++ b/TestBasePO/ExpenseFunctionalTests.csproj
@@ -55,7 +55,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Infrastructure\DbUtils\DataBaseActions.cs" />
+    <Compile Include="Infrastructure\DbUtils\DataBaseUtils.cs" />
+    <Compile Include="Infrastructure\Extensions.cs" />
     <Compile Include="Infrastructure\PageBase.cs" />
+    <Compile Include="Infrastructure\Utils\GridComponentUtils.cs" />
     <Compile Include="Infrastructure\WebOperationsBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample.cs" />
